syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "EmailProto";

package email;

import "common.proto";

service EmailService {
    rpc EmailSend (EmailSendRequest) returns (common.Response);
    rpc VerifyEmailCode (VerifyEmailCodeRequest) returns (common.Response);
}

message EmailSendRequest {
    uint64 userId = 1;
    string email = 2;
}

message VerifyEmailCodeRequest {
    uint64 userId = 1;
    string email = 2;
    string code = 3;
}